FIND_PACKAGE(Fuse)
FIND_PACKAGE(Castor)

ADD_DEFINITIONS ("-DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64")
#INCLUDE_DIRECTORIES (.;..;/usr/include/shift) 
#INCLUDE_DIRECTORIES (.;..;/usr/include/shift;/opt/fuse-2.8.0-pre2) 
INCLUDE_DIRECTORIES (.;..;${FUSE_INCLUDE_DIR};${CASTOR_INCLUDE_DIR}) 
#LINK_DIRECTORIES (/opt/fuse-2.8.0-pre2/lib)
ADD_EXECUTABLE (castorfs main.c) 
#ADD_DEPENDENCIES (castorfs man)
TARGET_LINK_LIBRARIES (castorfs ${CASTOR_LIBRARY} ${FUSE_LIBRARY})

INSTALL (TARGETS castorfs  DESTINATION bin)

